// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compute-element-view > view of cloud 1`] = `
{
  "__": "element",
  "autoLayout": {
    "direction": "TB",
  },
  "customColorDefinitions": {},
  "description": null,
  "edges": [
    {
      "id": "customer:cloud.frontend",
      "label": "opens in browser",
      "parent": null,
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend",
    },
    {
      "id": "support:cloud.frontend",
      "label": "manages",
      "parent": null,
      "relations": [
        "support:cloud.frontend.supportPanel",
      ],
      "source": "support",
      "target": "cloud.frontend",
    },
    {
      "id": "cloud.frontend:cloud.backend",
      "kind": "graphlql",
      "label": "requests",
      "parent": "cloud",
      "relations": [
        "cloud.frontend:cloud.backend",
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.supportPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend",
      "tags": [
        "next",
        "old",
      ],
      "tail": "odiamond",
      "target": "cloud.backend",
    },
    {
      "id": "cloud.backend:email",
      "label": "schedule",
      "parent": null,
      "relations": [
        "cloud.backend:email",
      ],
      "source": "cloud.backend",
      "tags": [
        "communication",
      ],
      "target": "email",
    },
    {
      "id": "cloud.backend:amazon",
      "label": "uploads",
      "parent": null,
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "tags": [
        "aws",
        "storage",
        "legacy",
      ],
      "target": "amazon",
    },
  ],
  "hash": "6df052156ae59d91622677537c2d657e4946d803",
  "id": "index",
  "links": null,
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "customer:cloud.frontend",
      ],
      "parent": null,
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "support:cloud.frontend",
      ],
      "parent": null,
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "support",
    },
    {
      "children": [
        "cloud.frontend",
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "id": "cloud",
      "inEdges": [
        "customer:cloud.frontend",
        "support:cloud.frontend",
      ],
      "kind": "system",
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "cloud.backend:email",
        "cloud.backend:amazon",
      ],
      "parent": null,
      "shape": "rectangle",
      "style": {},
      "tags": [
        "next",
        "old",
      ],
      "technology": null,
      "title": "cloud",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.frontend",
      "inEdges": [
        "customer:cloud.frontend",
        "support:cloud.frontend",
      ],
      "kind": "container",
      "level": 1,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "cloud.frontend:cloud.backend",
      ],
      "parent": "cloud",
      "shape": "browser",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "frontend",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.backend",
      "inEdges": [
        "cloud.frontend:cloud.backend",
      ],
      "kind": "container",
      "level": 1,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "cloud.backend:email",
        "cloud.backend:amazon",
      ],
      "parent": "cloud",
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "backend",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "email",
      "inEdges": [
        "cloud.backend:email",
      ],
      "kind": "system",
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [],
      "parent": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "email",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "icon": "tech:aws",
      "id": "amazon",
      "inEdges": [
        "cloud.backend:amazon",
      ],
      "kind": "system",
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [],
      "parent": null,
      "shape": "rectangle",
      "style": {},
      "tags": [
        "aws",
      ],
      "technology": null,
      "title": "amazon",
    },
  ],
  "rules": [
    {
      "include": [
        {
          "wildcard": true,
        },
      ],
    },
  ],
  "tags": null,
  "title": null,
  "viewOf": "cloud",
}
`;

exports[`compute-element-view > view of cloud.frontend 1`] = `
{
  "__": "element",
  "autoLayout": {
    "direction": "TB",
  },
  "customColorDefinitions": {},
  "description": null,
  "edges": [
    {
      "id": "customer:cloud.frontend.dashboard",
      "label": "opens in browser",
      "parent": null,
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend.dashboard",
    },
    {
      "id": "support:cloud.frontend.supportPanel",
      "label": "manages",
      "parent": null,
      "relations": [
        "support:cloud.frontend.supportPanel",
      ],
      "source": "support",
      "target": "cloud.frontend.supportPanel",
    },
    {
      "id": "cloud.frontend.dashboard:cloud.backend",
      "kind": "graphlql",
      "label": "requests",
      "line": "solid",
      "parent": null,
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.dashboard",
      "tags": [
        "next",
      ],
      "target": "cloud.backend",
    },
    {
      "id": "cloud.frontend.supportPanel:cloud.backend",
      "kind": "graphlql",
      "label": "fetches",
      "line": "dashed",
      "parent": null,
      "relations": [
        "cloud.frontend.supportPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.supportPanel",
      "tags": [
        "old",
      ],
      "tail": "odiamond",
      "target": "cloud.backend",
    },
  ],
  "hash": "388ed63a4179b91d2953e5c4908c651e3e826eb0",
  "id": "index",
  "links": null,
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "customer:cloud.frontend.dashboard",
      ],
      "parent": null,
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "support:cloud.frontend.supportPanel",
      ],
      "parent": null,
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "support",
    },
    {
      "children": [
        "cloud.frontend.dashboard",
        "cloud.frontend.supportPanel",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "id": "cloud.frontend",
      "inEdges": [
        "customer:cloud.frontend.dashboard",
        "support:cloud.frontend.supportPanel",
      ],
      "kind": "container",
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "cloud.frontend.dashboard:cloud.backend",
        "cloud.frontend.supportPanel:cloud.backend",
      ],
      "parent": null,
      "shape": "browser",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "frontend",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "icon": "tech:react",
      "id": "cloud.frontend.dashboard",
      "inEdges": [
        "customer:cloud.frontend.dashboard",
      ],
      "kind": "component",
      "level": 1,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "cloud.frontend.dashboard:cloud.backend",
      ],
      "parent": "cloud.frontend",
      "shape": "rectangle",
      "style": {},
      "tags": [
        "next",
      ],
      "technology": null,
      "title": "dashboard",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.frontend.supportPanel",
      "inEdges": [
        "support:cloud.frontend.supportPanel",
      ],
      "kind": "component",
      "level": 1,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "cloud.frontend.supportPanel:cloud.backend",
      ],
      "parent": "cloud.frontend",
      "shape": "rectangle",
      "style": {},
      "tags": [
        "old",
      ],
      "technology": null,
      "title": "adminPanel",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.backend",
      "inEdges": [
        "cloud.frontend.dashboard:cloud.backend",
        "cloud.frontend.supportPanel:cloud.backend",
      ],
      "kind": "container",
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [],
      "parent": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "backend",
    },
  ],
  "rules": [
    {
      "include": [
        {
          "wildcard": true,
        },
      ],
    },
  ],
  "tags": null,
  "title": null,
  "viewOf": "cloud.frontend",
}
`;
